--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 <h1>D&C Construction</h1>
 <img src="cool.jpg">
   <p>Things we can get done:
--Drywall
--Metal frame
--Wood frame
--Work on exterior and interior
--Drywall
--Mud texture layout
--deck
--install doors
-</p>
+<ul>
+  <li>Drywall</li>
+  <li>Metal frame</li>
+  <li>Wood frame</li>
+  <li>Work on exterior and interior</li>
+  <li>Drywall</li>
+  <li>Mud texture layout</li>
+  <li>deck</li>
+  <li>install doors</li>
+<ul/>
+  </p>
   <p id="sentence2">General contracting</p>
 </body>
 </html>
