--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 <ul/>
   </p>
   <p id="sentence2">General contracting</p>
-</body>
+<img src="cool2.jpg">
+<img src="cool3.jpg">
+  
+  
+  </body>
 </html>
