--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <ul/>
   </p>
   <p id="sentence2">General contracting</p>
-<img src="cool2.jpg">
-<img src="cool3.jpg">
-  
-  
-  </body>
+<h2>Metal frame<h2>
+  <img src="cool2.jpg">
+  <h3>Wood Frame<h3>
+  <img src="cool3.jpg">
+  <h4>drywall<h4> 
+  <img src="cool4.jpg">
+ 
+    </body>
 </html>
