--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>D&C Construction</h1>
-<img src="cool.jpg">
+<img src="cool5.jpg">
   <p>Things we can get done:
 <ul>
   <li>Drywall</li>
