changed the first image

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <h2>Metal frame<h2>
   <img src="cool2.jpg">
   <h3>Wood Frame<h3>
-  <img src="cool3.jpg">
+  <img id="frame" src="cool3.jpg">
   <h4>drywall<h4> 
-  <img src="cool4.jpg">
+  <img id="metal frame" src="cool4.jpg">
  
     </body>
 </html>
