--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <p id="sentence2">General contracting</p>
 <h2>Metal frame<h2>
   <img src="cool6.jpg">
+ <h3>metal frame<h3>
   <img id="frame" src="cool7.jpg">
   <h4>drywall<h4> 
   <img id="metal frame" src="cool8.jpg">
