--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <img id="frame" src="cool7.jpg">
   <h4>drywall<h4> 
   <img id="metal frame" src="cool8.jpg">
- <h5>contact daniel at
+ <h5>CONTACT DANIEL AT
    7208784145<h5>
     </body>
 </html>
