--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <img id="frame" src="cool7.jpg">
   <h4>drywall<h4> 
   <img id="metal frame" src="cool8.jpg">
-    <img src="cool9.jpg">
+    <img id="detailing"
+         src="cool9.jpg">
     
     <h5>CONTACT DANIEL AT
    7208784145<h5>
